<resources>
    <string name="app_name">Prueba de Ingreso</string>
    <string name="see">VER PUBLICACIONES</string>
    <string name="title">Titulo:</string>
    <string name="cometary">Comentario:</string>
    <string name="name">Nombre:</string>
    <string name="phone">Teléfono:</string>
    <string name="email">Correo:</string>
    <string name="message">SIN RESULTADOS DE BUSQUEDA :(</string>
</resources>